--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
 
         <p>
             Não é mais como era antes <br>
@@ -52,7 +52,7 @@
             Ou vai até no começo <br>
             Agora é .com <br>
             Se o saite é muito bom <br>
-            Ele vale um alto preço. <br>
+            Ele vale um alto preço. <br><br>
             Pra pintar bizarrice <br>
             Pra piorar a liguagem <br>
             O emoticom é um risco <br>
@@ -66,7 +66,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
 
         <p>
             Tenho saudade das cartas <br>
@@ -91,7 +91,7 @@
             A pessoa foi embora <br>
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
+            Da tecnologia do agora. <br><br>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
             Deus escuta todo mundo <br>
